examples/test/testpolicy3533.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3533
  namespace: namespace135
spec:
  podSelector:
    matchLabels:
      key7: value11
      key37: value14
      key49: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value8
          key33: value39
          key16: value40
      podSelector:
        matchLabels:
          key0: value45
